# cr_libraries

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build-third-party.bat  build-third-party.sh
cmake/: FindCppNetLib.cmake  FindGperftools.cmake  FindMysql.cmake  FindMysqlCpp.cmake  FindRocksdb.cmake  FindSelene.cmake  FindUuid.cmake  FindXlnt.cmake  boost.cmake  common.cmake  cpp-netlib.cmake  eluna.cmake  gperftools.cmake  lua.cmake  mongodb.cmake  mysql.cmake  openssl.cmake  protobuf.cmake  rapidxml.cmake  rocksdb.cmake  selene.cmake  third_party.cmake  uuid.cmake  xlnt.cmake  zookeeper.cmake
example/: CMakeLists.txt
example/cr/: CMakeLists.txt
examples/cr/: CMakeLists.txt
examples/cr/concurrent/: CMakeLists.txt  pipe_example.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/cr/app/: CMakeLists.txt  application.cpp  application.h  cluster.h  exceptions.h  local_cluster_impl.cpp  local_cluster_impl.h  name_command.proto  name_op.proto  name_service.cpp  name_service.h  raft_service.cpp  raft_service.h  raft_service.proto  service.cpp  service.h
src/common/cr/cluster/: CMakeLists.txt  data_node.cpp  data_node.h  data_node_stat.cpp  data_node_stat.h  name_service.cpp  name_service.h  name_service.proto  node_version.h  value_node.proto
src/common/cr/core/: CMakeLists.txt  assert_builder.h  assert_error.h  consistent_hash.h  error.h  exception.cpp  exception.h  heap.h  optional.h  scope_guard.cpp  streams.h  streams_empty.h  streams_enumerators.h  streams_generate.h  tuple_utils.h
src/common/cr/lua/: CMakeLists.txt  check_type.h  log_params.cpp  log_params.h  optional.h  protobuf.cpp  protobuf.h  protobuf_pool.cpp  protobuf_pool.h  reference.h  string.cpp  string.h  vector.h
src/common/cr/network/: CMakeLists.txt  acceptor.cpp  acceptor.h  byte_buffer.cpp  byte_buffer_stream.cpp  byte_buffer_stream.h  connection.cpp  connection.h  connector.cpp  connector.h  pb_connection.cpp  pb_connection.h  protobuf.h  protobuf_codec.cpp  protobuf_codec.h
src/common/cr/raft/: CMakeLists.txt  buddy_node.cpp  buddy_node.h  candidate.cpp  candidate.h  exception.h  file_storage.cpp  file_storage.h  follower.cpp  follower.h  leader.cpp  leader.h  mem_storage.cpp  mem_storage.h  options.cpp  options.h  raft.cpp  raft.h  raft_builder.h  raft_msg.proto  raft_node.cpp  raft_node.h  raft_service.cpp  raft_service.h  raft_service.proto  raft_state.cpp  raft_state.h  service.cpp  service.h  service_options.cpp  service_options.h  storage.h
src/common/cr/uuid/: CMakeLists.txt  unix_uuid.cpp  uuid.h  win_uuid.cpp
src/common/cr/zk/: CMakeLists.txt  create_model.cpp  create_model.h  data_node.cpp  data_node.h  data_node_stat.cpp  data_node_stat.h  data_tree.cpp  data_tree.h  exceptions.h  service.proto  service_options.h  session.h  watch_manager.cpp  watch_manager.h  watcher.cpp  watcher.h
src/cr/: CMakeLists.txt
src/cr/app/: CMakeLists.txt  application.cpp  application.h  cluster.h  cluster_proxy_impl.cpp  cluster_proxy_impl.h  exceptions.h  local_cluster.cpp  local_cluster.h  local_cluster_impl.cpp  local_cluster_impl.h  message.h  service.cpp  service.h
src/cr/common/: CMakeLists.txt  assert.h  assert_builder.cpp  assert_builder.h  assert_error.h  error.cpp  error.h  exception.cpp  exception.h  function.h  lock_guards.h  logging.cpp  logging.h  scope_guard.h  streams.h  streams_enumerators.h  streams_for.h  streams_from.h  streams_generate.h  throw.h  type_utils.h
src/cr/concurrent/: CMakeLists.txt  pipe.h  spawn.cpp  spawn.h  spawn_coro.h  thread.cpp  thread.h
src/cr/framework/common/: CMakeLists.txt  path_directory.cpp  path_directory.h
src/cr/log/: CMakeLists.txt  logging.cpp
src/cr/network/: CMakeLists.txt  byte_buffer.cpp  byte_buffer.h  pb_connection.cpp  pb_connection.h  pb_serialize.cpp  pb_serialize.h  pipe.h  protobuf_utils.cpp  protobuf_utils.h  spawn.cpp  spawn.h  spawn_coro.h
src/cr/protobuf/: CMakeLists.txt  any.cpp  any.h  reflect.cpp  reflect.h
src/cr/raft/: CMakeLists.txt  candidate.cpp  candidate.h  entry.cpp  entry.h  error_code.h  exception.cpp  exception.h  file_storage.cpp  file_storage.h  follower.cpp  follower.h  initialize.h  leader.cpp  leader.h  log_entry.cpp  log_entry.h  log_storage.cpp  log_storage.h  mem_log_storage.cpp  mem_log_storage.h  mem_storage.cpp  mem_storage.h  node.cpp  node.h  raft.cpp  raft.h  raft_builder.cpp  raft_builder.h  raft_engine.cpp  raft_engine.h  raft_engine_builder.cpp  raft_engine_builder.h  raft_msg.proto  raft_state.cpp  raft_state.h  replay.cpp  replay.h  state_machine.h  storage.cpp  (+1 more)
src/example/common/raft/: CMakeLists.txt  safety_test.cpp  server.cpp  server.h
src/examples/: CMakeLists.txt
src/examples/network/: CMakeLists.txt  pipe_example.cpp
src/test/common/app/: CMakeLists.txt  application_unittest.cpp  calc_service.h
src/test/common/network/: CMakeLists.txt  byte_buffer_stream_unittest.cpp  protobuf_utils_unittest.cpp  unittest_main.cpp
src/test/common/protobuf/: CMakeLists.txt  any_unittest.cpp  reflect_unittest.cpp  unittest.proto
src/tests/common/: CMakeLists.txt  assert_unittest.cpp  error_unittest.cpp  exception_unittest.cpp  logging_unittest.cpp  scope_guard_unittest.cpp  streams_unittest.cpp  throw_unittest.cpp
src/tests/log/: CMakeLists.txt  logging_unittest.cpp
src/tests/network/: CMakeLists.txt  byte_buffer_unittest.cpp  pipe_unittest.cpp  protobuf_utils_unittest.cpp  spawn_unittest.cpp
test/: CMakeLists.txt
test/cr/: CMakeLists.txt
test/cr/app/: CMakeLists.txt  application_unittest.cpp  calc_service.cpp  calc_service.h  req_service.cpp  req_service.h  unittest.proto  unittest_main.cpp
test/cr/concurrent/: CMakeLists.txt  pipe_unittest.cpp  spawn_unittest.cpp  thread_unittest.cpp
test/cr/network/: CMakeLists.txt  byte_buffer_unittest.cpp  protobuf_utils_unittest.cpp  unittest_main.cpp
tests/cr/raft/: CMakeLists.txt  candidate_unittest.cpp  file_storage_unittest.cpp  follower_unittest.cpp  leader_unittest.cpp  mem_log_storage_unittest.cpp  mem_storage_unittest.cpp  raft_engine_unittest.cpp  replay_unittest.cpp  unittest_main.cpp
(+63 files in other folders)
